remote dev sbt_opts, xterm-256