@@ -1,4 +1,6 @@
 #!/usr/bin/env zsh
+# TODO: don't transfer whole git repo, send a shallow clone instead
+# git clone --depth 1 file://$(pwd) ssh...$REMOTETMP
 
 SBTARG=${SBTARG:-"core"}
 EXTRASBTARGS=${EXTRASBTARGS:-""}
@@ -9,7 +11,7 @@ DEVPORT=${DEVPORT:-$(shuf -i 40000-41000 -n 1)}
 BACKEND=${BACKEND:-$(shuf -i 50000-51000 -n 1)}
 REMOTETMP=$(mktemp)
 
-rsync -aP --delete ${LOCALDIR}/ ${REMOTEHOST}:${REMOTETMP}/ --exclude-from=${LOCALDIR}/.ignore || exit 1
+rsync -aP --delete ${LOCALDIR}/ ${REMOTEHOST}:${REMOTETMP}/ --exclude-from=${LOCALDIR}/remotedevignore || exit 1
 
 lsyncd =(cat <<EOF
 settings {
@@ -31,7 +33,9 @@ EOF
 LSYNCDPID=$!
 echo $LSYNCDPID
 
-ssh -tC -L 12345:localhost:${DEVPORT} -L ${DEVPORT}:localhost:${DEVPORT} ${REMOTEHOST} "\
+SBT_OPTS="-Xms512M -Xmx4G -Xss1M -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC"
+
+TERM=xterm-256color ssh -tC -L 12345:localhost:${DEVPORT} -L ${DEVPORT}:localhost:${DEVPORT} ${REMOTEHOST} "\
     mkdir -p $REMOTETMP;    \
     cd $REMOTETMP;          \
     nix-shell --run \"zsh -ic \\\"              \
@@ -44,6 +48,7 @@ ssh -tC -L 12345:localhost:${DEVPORT} -L ${DEVPORT}:localhost:${DEVPORT} ${REMOT
         export WUST_CORE_PORT=$BACKEND;         \
         export WUST_PORT=$DEVPORT;              \
         export DEV_SERVER_COMPRESS=true;        \
+        export SBT_OPTS='$SBT_OPTS';              \
         export EXTRASBTARGS=$EXTRASBTARGS;      \
         ./start sbtWithPoll $SBTARG;         \
         zsh -i;                                 \
